<resources>
    <string name="app_name">CargoStar</string>
    <string name="app_version">Версия приложения: %1$s</string>
    <string name="default_notification_channel_id">1</string>
    <string name="implicit_notification_channel_id">2</string>
    <string name="implicit_notification_channel_name">Implicit Notification Channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_server_url">https://cargostar.uz/api/</string>
    <string name="dev_server_url">https://cargo-dev.alex-its.uz/api/</string>
    <string name="default_api_login">admin</string>
    <string name="default_api_password">5N8zWV2BbQ</string>
    <string name="cargostar">Cargo Star</string>
    <string name="tnt">TNT</string>
    <string name="fedex">FedEx</string>
    <string name="provider">%s</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="keep_logging">Оставаться в системе</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="search">Поиск</string>
    <string name="bids">Заявки</string>
    <string name="parcels">Перевозки</string>
    <string name="public_requests">Общие"\n"заявки</string>
    <string name="my_requests">Мои"\n"заявки</string>
    <string name="create_receipt">Создать"\n"накладную</string>
    <string name="current_parcels">Текущие"\n"перевозки</string>
    <string name="scan_parcels">Сканировать"\n"перевозки</string>
    <string name="parcels_delivery">Доставка"\n"перевозок</string>
    <string name="create_parcel_heading">Создать перевозку</string>
    <string name="find_user">Найти пользователя</string>
    <string name="choose">Выбрать</string>
    <string name="public_data">Общие данные</string>
    <string name="invoice_id">ID накладной</string>
    <string name="invoice_number">Номер накладной</string>
    <string name="service_provider">Поставщик услуг</string>
    <string name="courier_id">ID курьера</string>
    <string name="courier_id_placeholder">ID курьера: %1$d</string>
    <string name="operator_id">ID оператора</string>
    <string name="accountant_id">ID бухгалтера</string>
    <string name="sender_data">Данные об отправителе</string>
    <string name="sender_signature">Подпись отправителя</string>
    <string name="receiver_signature">Подпись получателя</string>
    <string name="login_email">Логин/email</string>
    <string name="cargostar_account_number">Номер аккаунта CargoStar</string>
    <string name="tnt_account_number">Номер аккаунта TNT</string>
    <string name="fedex_account_number">Номер аккаунта Fedex</string>
    <string name="account_numbers">Номера аккаунтов</string>
    <string name="take_address">Адрес забора</string>
    <string name="payer_address">Адрес плательщика</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="region">Область/территория</string>
    <string name="post_index">Почтовый индекс</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="middle_name">Отчество</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Email</string>
    <string name="receiver_data">Данные о получателе</string>
    <string name="payer_data">Данные о плательщике</string>
    <string name="payer_is_sender">Плательщик - отправитель</string>
    <string name="payer_is_recipient">Плательщик - получатель</string>
    <string name="sale_15_percent">Скидка 15%</string>
    <string name="individual">Физическое лицо</string>
    <string name="checking_account">Расчетный счет</string>
    <string name="bank">Банк</string>
    <string name="payer_registration_code">Регистр. код плательщика</string>
    <string name="mfo">МФО</string>
    <string name="oked">ОКЭД</string>
    <string name="tax_id">TaxID</string>
    <string name="parcel_data">Данные о перевозке</string>
    <string name="logistics_data">Данные о транспортировке</string>
    <string name="tracking_code_main">Основной код отслеживания</string>
    <string name="qr_code">QR-код</string>
    <string name="party_number">Номер партии</string>
    <string name="party_qr_code">QR-код партии</string>
    <string name="special_cargo">Специальный груз</string>
    <string name="stackable_cargo">Штабелируемый груз</string>
    <string name="dangerous_cargo">Опасный груз</string>
    <string name="courier_guidelines">Инструкции для курьера</string>
    <string name="tariff">Тариф</string>
    <string name="direction">Направление</string>
    <string name="for_each_cargo">Для каждой единицы груза</string>
    <string name="cargo_description">Описание вложения</string>
    <string name="doc_type">Документы</string>
    <string name="box_type">Посылка</string>
    <string name="pkg">Упаковка</string>
    <string name="cargo_name">Наименование вложения</string>
    <string name="cargo_price">Стоимость вложения</string>
    <string name="package_type">Тип упаковки</string>
    <string name="weight">Вес (кг)</string>
    <string name="length">Длина (см)</string>
    <string name="width">Ширина (см)</string>
    <string name="height">Высота (см)</string>
    <string name="destination_quantity">Количество мест</string>
    <string name="calculator">Калькулятор</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="add">Добавить</string>
    <string name="quantity">Количество</string>
    <string name="dimensions">Габариты (см)</string>
    <string name="quantity_example">2 шт.</string>
    <string name="weight_example">18 кг.</string>
    <string name="dimensions_example">20х20х50</string>
    <string name="sum_example">0 сум</string>
    <string name="calculate">Рассчитать</string>
    <string name="calculation_results">Результаты расчета</string>
    <string name="express">Express</string>
    <string name="economy_express">Economy Express</string>
    <string name="payment">Оплата</string>
    <string name="save">Сохранить</string>
    <string name="cash">Наличными</string>
    <string name="terminal">Терминал</string>
    <string name="transfer">Перечисление</string>
    <string name="corporate">Корпоративная карта</string>
    <string name="create_invoice">Создать накладную</string>
    <string name="update_invoice">Редактировать накладную</string>
    <string name="notifications">Уведомления</string>
    <string name="date_example">15.04.2020</string>
    <string name="new_bid">Новая заявка в </string>
    <string name="public_bids_quote">\"Общие заявки\"</string>
    <string name="my_bids_quote">\"Мои заявки\"</string>
    <string name="tas">Tas.</string>
    <string name="sam">Sam.</string>
    <string name="create_user">Создать пользователя</string>
    <string name="authorization_data">Данные авторизации</string>
    <string name="user_id">ID пользователя</string>
    <string name="client_account_numbers">Номера аккаунтов клиента</string>
    <string name="personal_information">Персональная информация</string>
    <string name="main_address">Основной адрес</string>
    <string name="geolocation">Геолокация</string>
    <string name="photo">Фотография</string>
    <string name="discount">Скидка</string>
    <string name="signature">Подпись</string>
    <string name="extra_phone_number">Доп. Телефон</string>
    <string name="extra_address">Доп. Адрес</string>
    <string name="extra_geolocation">Доп. Геолокация</string>
    <string name="passport_serial">Серия паспорта</string>
    <string name="INN">ИНН</string>
    <string name="company_name">Название компании</string>
    <string name="payment_data">Данные об оплате</string>
    <string name="contract">Договор</string>
    <string name="commercial">Юридическое лицо</string>
    <string name="NDC">Рег. номер плательщика НДС</string>
    <string name="create">Создать</string>
    <string name="public_bids_one_line">Общие заявки</string>
    <string name="my_bids_one_line">Мои заявки</string>
    <string name="create_parcel_one_line">Создать перевозку</string>
    <string name="current_parcels_one_line">Просмотр текущих перевозок</string>
    <string name="filter">Фильтр</string>
    <string name="in_transit">В транзитной точке</string>
    <string name="on_the_way">В пути</string>
    <string name="delivered">Доставлена</string>
    <string name="lost">Утеряна</string>
    <string name="all">Все</string>
    <string name="transportation">Перевозка</string>
    <string name="partial">Партия</string>
    <string name="cost">Стоимость</string>
    <string name="fuel_tax">Топливная надбавка</string>
    <string name="current_location">Текущее местоположение: %1$s</string>
    <string name="dispatch_date">Дата отправки</string>
    <string name="arrival_date">Дата прибытия</string>
    <string name="additional_documents">Сопроводительные документы</string>
    <string name="e_bid">Эл. заявка</string>
    <string name="e_waybill">Эл. накладная</string>
    <string name="payer_guarantee_letter">Гарант. письмо плательщика</string>
    <string name="pay_bill">Счет на оплату</string>
    <string name="invoice_document">Счет-фактура</string>
    <string name="invoice">Инвойс</string>
    <string name="other_documents">Другие документы</string>
    <string name="download">Скачать</string>
    <string name="scan_parcels_one_line">Сканировать перевозки</string>
    <string name="parcels_delivery_one_line">Доставка перевозок</string>
    <string name="position">Должность</string>
    <string name="unique_value">Уникальное значение</string>
    <string name="absent">Отсутствует</string>
    <string name="png_picture">Изображение.png</string>
    <string name="logout">Выйти</string>
    <string name="address_book">Адресная книга</string>
    <string name="uzbekistan">uzbekistan</string>
    <string name="undefined">Неизвестно</string>
    <string name="empty">Пусто</string>
    <string name="public_requests_body">Новая заявка в \"Общие Заявки\"</string>
    <string name="my_requests_body">Новая заявка в \"Мои Заявки\"</string>
    <string name="request_has_changed">Заявка была изменена</string>
    <string name="new_transportation">Новая перевозка</string>
    <string name="transportation_status_changed">Статус перевозки был изменен</string>
    <string name="rounded_total_price">%1$s сум</string>
    <string name="choose_country">Выберите страну</string>
    <string name="choose_region">Выберите страну</string>
    <string name="choose_city">Выберите город</string>
    <string name="header_courier_full_name">%1$s %2$s</string>
    <string name="header_branch_name">филиал \"%1$s\"</string>
    <string name="choose_recipient_from_address_book">Выберите получателя</string>
    <string name="choose_payer_from_address_book">Выберите плательщика</string>
    <string name="request_id">ID заявки</string>
    <string name="address">Адрес</string>
    <string name="samarkand">samarkand</string>
    <string name="tashkent">tashkent</string>
    <string name="contract_number">Номер контракта</string>
    <string name="scan_qr">Отсканировать</string>
    <string name="submit">Подтвердить</string>
    <string name="input_qr_code">Введите QR-code вручную</string>
    <string name="online">Онлайн</string>
    <string name="comment">Комментарий</string>
    <string name="delivery_invoice_id">ID накладной: %1$d</string>
    <string name="delivery_recipient_full_name">Ф.И.О.: %1$s</string>
    <string name="delivery_recipient_phone">Номер телефона: %1$s</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="delivery_organization">Организация: %1$s</string>
    <string name="delivery_comment">Комментарий: %1$s</string>
    <string name="refused">Отказано</string>
    <string name="delivery_signature_date">Дата подписи: %1$s</string>
    <string name="office">OFFICE</string>
</resources>