<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="15dp">

    <TextView
        android:id="@+id/invoice_id_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_invoice_id"/>

    <TextView
        android:id="@+id/recipient_full_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/invoice_id_text_view"
        app:layout_constraintBottom_toTopOf="@id/recipient_phone_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toStartOf="@id/accepted_refused_text_view"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_recipient_full_name"/>

    <TextView
        android:id="@+id/recipient_phone_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipient_full_name_text_view"
        app:layout_constraintBottom_toTopOf="@id/delivery_address_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toEndOf="@id/recipient_full_name_text_view"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_recipient_phone"/>

    <TextView
        android:id="@+id/delivery_address_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recipient_phone_text_view"
        app:layout_constraintBottom_toTopOf="@id/organization_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toEndOf="@id/recipient_full_name_text_view"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_address"/>

    <TextView
        android:id="@+id/organization_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/delivery_address_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toEndOf="@id/recipient_full_name_text_view"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_organization"/>

    <TextView
        android:id="@+id/signature_date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/organization_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="#A5ABC0"
        android:text="@string/delivery_signature_date"/>

    <TextView
        android:id="@+id/comment_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signature_date_text_view"
        app:layout_constraintStart_toStartOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toEndOf="@id/recipient_full_name_text_view"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/geometria_medium"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:text="@string/delivery_comment"/>

    <TextView
        android:id="@+id/accepted_refused_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/invoice_id_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:textSize="13sp"
        android:textColor="#FFF"
        android:fontFamily="@font/geometria_bold"
        android:text="@string/refused"
        android:background="@drawable/bg_red"
        android:paddingHorizontal="11dp"
        android:paddingVertical="2dp" />

    <TextView
        android:id="@+id/delivery_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/accepted_refused_text_view"
        app:layout_constraintEnd_toEndOf="@id/accepted_refused_text_view"
        android:layout_marginTop="8dp"
        android:textSize="13sp"
        android:textColor="#FFF"
        android:fontFamily="@font/geometria_bold"
        android:background="@drawable/bg_grey"
        android:paddingHorizontal="11dp"
        android:paddingVertical="2dp"
        android:text="@string/office"/>

</androidx.constraintlayout.widget.ConstraintLayout>