<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="15dp">

    <TextView
        android:id="@+id/index_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/s_margin"
        android:fontFamily="@font/geometria_bold"
        android:textSize="@dimen/h1"
        android:textColor="#0052A6"
        android:text="1." />

    <TextView
        android:id="@+id/parcel_id_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/index_text_view"
        app:layout_constraintBottom_toBottomOf="@id/index_text_view"
        app:layout_constraintStart_toEndOf="@id/index_text_view"
        app:layout_constraintEnd_toStartOf="@id/status_text_view"
        android:layout_marginStart="@dimen/s_margin"
        android:fontFamily="@font/geometria_medium"
        android:textSize="@dimen/h2"
        android:textColor="@color/colorBlack"
        android:text="@string/empty"/>
    
    <TextView
        android:id="@+id/parcel_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/parcel_id_text_view"
        app:layout_constraintTop_toBottomOf="@id/parcel_id_text_view"
        android:layout_marginTop="@dimen/xxs_margin"
        android:fontFamily="@font/geometria_medium"
        android:textSize="@dimen/h2"
        android:textColor="@color/colorTextHint"
        android:text="@string/transportation"/>

    <TextView
        android:id="@+id/from_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/next_image_view"
        app:layout_constraintStart_toStartOf="@id/parcel_id_text_view"
        android:layout_marginTop="@dimen/xxs_margin"
        android:textSize="@dimen/h2"
        android:textColor="@color/colorTextHint"
        android:fontFamily="@font/geometria_bold"
        android:text="@string/from"/>

    <ImageView
        android:id="@+id/path_image_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/from_text_view"
        app:layout_constraintBottom_toBottomOf="@id/from_text_view"
        app:layout_constraintStart_toEndOf="@id/from_text_view"
        android:layout_marginStart="@dimen/xxs_margin"
        android:contentDescription="@string/new_bid"
        android:src="@drawable/ic_path_grey"/>

    <TextView
        android:id="@+id/to_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/from_text_view"
        app:layout_constraintTop_toBottomOf="@id/next_image_view"
        app:layout_constraintStart_toEndOf="@id/path_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/xxs_margin"
        android:layout_marginEnd="@dimen/xxs_margin"
        android:textSize="@dimen/h2"
        android:textColor="@color/colorTextHint"
        android:fontFamily="@font/geometria_bold"
        android:text="@string/to"/>

    <ImageView
        android:id="@+id/next_image_view"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/parcel_type_text_view"
        app:layout_constraintBottom_toBottomOf="@id/parcel_type_text_view"
        app:layout_constraintEnd_toEndOf="@id/status_text_view"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitCenter"
        android:contentDescription="@string/new_bid"
        android:src="@drawable/ic_next_arrow"/>
    
    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/parcel_id_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/l_margin"
        android:textSize="@dimen/h3"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/geometria_bold"
        android:text="@string/undefined"
        android:background="@drawable/bg_red"
        android:paddingHorizontal="@dimen/xs_margin"
        android:paddingVertical="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>