<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.alexits.cargostar.view.activity.SignInActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="0dp"
        android:layout_height="97dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_cargostar_logo"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/cargostar"/>

    <TextView
        android:id="@+id/authorization_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
        app:layout_constraintStart_toStartOf="@id/login_edit_text"
        android:layout_marginTop="112dp"
        android:text="@string/authorization"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/geometria_medium"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/authorization_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/edit_text_locked"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/geometria_actual"
        android:textColorHint="#A5ABC0"
        android:hint="@string/login"
        android:paddingHorizontal="21dp"
        android:inputType="text"
        android:autofillHints="@string/login" />

    <RelativeLayout
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_edit_text"
        app:layout_constraintStart_toStartOf="@id/login_edit_text"
        app:layout_constraintEnd_toEndOf="@id/login_edit_text"
        android:layout_marginTop="33dp">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/edit_text_locked"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/geometria_actual"
            android:textColorHint="#A5ABC0"
            android:hint="@string/password"
            android:paddingHorizontal="21dp"
            android:inputType="textPassword"
            android:autofillHints="@string/password" />

        <ImageView
            android:id="@+id/password_eye_image_view"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignEnd="@id/password_edit_text"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_hide_password"
            android:scaleType="fitCenter"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/password"/>
    </RelativeLayout>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintStart_toStartOf="@id/login_edit_text"
        app:layout_constraintEnd_toEndOf="@id/login_edit_text"
        android:layout_marginTop="45dp"
        android:background="@drawable/btn_gradient_orange"
        android:textSize="17sp"
        android:text="@string/sign_in"
        android:fontFamily="@font/geometria_medium"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"/>

    <CheckBox
        android:id="@+id/keep_logging_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        app:layout_constraintStart_toStartOf="@id/sign_in_btn"
        android:text="@string/keep_logging"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/geometria_actual"
        android:layout_marginTop="24dp"
        android:buttonTint="@color/colorBlue"
        android:translationX="-4dp"/>

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toTopOf="@id/keep_logging_check_box"
        app:layout_constraintBottom_toBottomOf="@id/keep_logging_check_box"
        app:layout_constraintEnd_toEndOf="@id/sign_in_btn"
        android:textSize="14sp"
        android:textColor="@color/colorBlue"
        android:fontFamily="@font/geometria_actual"/>

    <ImageView
        android:id="@+id/parcels_image_view"
        android:layout_width="0dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_parcels"
        android:contentDescription="@string/cargostar"
        android:layout_marginBottom="55dp"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>