<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/first_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="35dp"
        android:textSize="16sp"
        android:textColor="#A5ABC0"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/region"/>

    <RelativeLayout
        android:id="@+id/first_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_text_view"
        app:layout_constraintStart_toStartOf="@id/first_text_view"
        app:layout_constraintEnd_toStartOf="@id/second_field"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/edit_text_locked">

        <Spinner
            android:id="@+id/first_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:prompt="@string/choose_region"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/second_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/first_text_view"
        app:layout_constraintStart_toStartOf="@id/second_field"
        android:textSize="16sp"
        android:textColor="#A5ABC0"
        android:fontFamily="@font/geometria_actual"
        android:text="@string/city"/>

    <RelativeLayout
        android:id="@+id/second_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/first_field"
        app:layout_constraintBottom_toBottomOf="@id/first_field"
        app:layout_constraintStart_toEndOf="@id/first_field"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintHorizontal_weight="1"
        android:background="@drawable/edit_text_locked">

        <Spinner
            android:id="@+id/second_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:prompt="@string/choose_city"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>